[gd_scene load_steps=6 format=3 uid="uid://c8cmvjk1bngem"]

[ext_resource type="Script" path="res://Meteor_spawner.gd" id="1_2abg0"]
[ext_resource type="PackedScene" uid="uid://iuo22aimfs4f" path="res://Meteor.tscn" id="2_csv4p"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_edld4"]
friction = 0.0
bounce = 9.22337e+18

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xkenk"]
size = Vector2(5531.25, 370)

[sub_resource type="Curve2D" id="Curve2D_twggw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1923.38, -2114.43, 0, 0, 0, 0, 3422.95, -362.979)
}
point_count = 2

[node name="PlushieSpawner" type="Node"]
script = ExtResource("1_2abg0")
mob_scene = ExtResource("2_csv4p")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 326)

[node name="Border" type="StaticBody2D" parent="."]
disable_mode = 2
physics_material_override = SubResource("PhysicsMaterial_edld4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border"]
position = Vector2(1081, 1409)
shape = SubResource("RectangleShape2D_xkenk")

[node name="MeteorTimer" type="Timer" parent="."]
wait_time = 0.124

[node name="MeteorPath" type="Path2D" parent="."]
position = Vector2(-1255, -624)
rotation = -0.580572
curve = SubResource("Curve2D_twggw")

[node name="MeteorSpawnLoc" type="PathFollow2D" parent="MeteorPath"]
position = Vector2(-1923.38, -2114.43)
rotation = 0.316581

[connection signal="timeout" from="MeteorTimer" to="." method="_on_meteor_timer_timeout"]
